--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Artifika";
+  src: url("../public/fonts/Artifika.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
